eurasia/eurasiacon/binary2_540_omap4430_android_debug/host/intermediates/useparser/use.output
Terminals unused in grammar

   DATAFORMAT
   UNEXPECTED_CHARACTER


State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program instruction INSTRUCTION_DELIMITER
    3        | program pseudo_instruction INSTRUCTION_DELIMITER
    4        | program INPUT opt_register_list
    5        | program OUTPUT opt_register_list
    6        | program INSTRUCTION_DELIMITER
    7        | program forcealign INSTRUCTION_DELIMITER
    8        | program IDENTIFIER COLON_PLUS_DELIMITER
    9        | program CLOSE_CURLY_BRACKET
   10        | program OPEN_CURLY_BRACKET

   11 opt_register_list: /* empty */
   12                  | opt_register_list register_type NUMBER

   13 pseudo_instruction: SCHEDOFF
   14                   | SCHEDON
   15                   | SKIPINVON
   16                   | SKIPINVOFF
   17                   | REPEAT_FLAG
   18                   | REPEATOFF
   19                   | TARGET TARGET_SPECIFIER
   20                   | TARGET TARGET_SPECIFIER COMMA NUMBER
   21                   | EXPORT IDENTIFIER
   22                   | IMPORT IDENTIFIER
   23                   | MODULEALIGN NUMBER
   24                   | TEMP_REG_DEF temp_reg_names
   25                   | NAMED_REGS_RANGE NUMBER COMMA NUMBER
   26                   | RENAME_REG IDENTIFIER COMMA IDENTIFIER

   27 forcealign: FORCE_ALIGN NUMBER
   28           | FORCE_ALIGN NUMBER COMMA NUMBER
   29           | MISALIGN

   30 instruction: preopcode_flag OPCODE opcode_modifier argument maybe_mask COMMA source_arguments
   31            | PLUS OPCODE opcode_modifier argument maybe_mask COMMA source_arguments
   32            | preopcode_flag LD_OPCODE opcode_modifier argument COMMA ld_argument COMMA source_arguments
   33            | preopcode_flag ST_OPCODE opcode_modifier st_argument COMMA source_arguments
   34            | preopcode_flag ELD_OPCODE opcode_modifier argument COMMA eld_argument COMMA argument COMMA argument
   35            | preopcode_flag BRANCH_OPCODE opcode_modifier label
   36            | preopcode_flag CALL_OPCODE opcode_modifier procedure
   37            | preopcode_flag EFO_OPCODE opcode_modifier argument EQUALS efo_dest_select COMMA efo_expression COMMA source_arguments
   38            | IDENTIFIER COLON

   39 $@1: /* empty */

   40 instruction: PROC IDENTIFIER $@1 OPEN_BRACKET temp_reg_names_optional CLOSE_BRACKET
   41            | preopcode_flag LAPC_OPCODE opcode_modifier
   42            | preopcode_flag NOP_OPCODE opcode_modifier
   43            | preopcode_flag LOCKRELEASE_OPCODE opcode_modifier
   44            | preopcode_flag LOCKRELEASE_OPCODE opcode_modifier arg_register
   45            | PTOFF_OPCODE opcode_modifier
   46            | preopcode_flag WDF_OPCODE opcode_modifier arg_register
   47            | preopcode_flag CFI_OPCODE opcode_modifier arg_register COMMA arg_register COMMA arg_register
   48            | preopcode_flag ONEARG_OPCODE opcode_modifier arg_register
   49            | preopcode_flag IDF_OPCODE opcode_modifier arg_register COMMA idf_path
   50            | preopcode_flag EXT_OPCODE opcode_modifier argument EQUALS efo_dest_select COMMA argument COMMA argument COMMA argument
   51            | preopcode_flag EXT_OPCODE opcode_modifier argument COMMA argument COMMA argument COMMA argument
   52            | PLUS COISSUE_OPCODE opcode_modifier source_arguments
   53            | PLUS ASOP2_OPCODE opcode_modifier source_arguments
   54            | PLUS ASOP2_OPCODE opcode_modifier COMMA source_arguments
   55            | preopcode_flag FIR_OPCODE opcode_modifier argument maybe_mask COMMA source_arguments
   56            | preopcode_flag FIR_OPCODE opcode_modifier COMMA source_arguments
   57            | preopcode_flag EMITVTX_OPCODE opcode_modifier source_arguments

   58 label: IDENTIFIER
   59      | IDENTIFIER PLUS expr
   60      | IDENTIFIER MINUS expr

   61 procedure: IDENTIFIER

   62 maybe_mask: /* empty */
   63           | MASK

   64 preopcode_flag: /* empty */
   65               | predicate preopcode_flag
   66               | repeat preopcode_flag
   67               | SKIPINV_FLAG preopcode_flag
   68               | NOSCHED_FLAG preopcode_flag
   69               | OPEN_BRACKET preopcode_flag CLOSE_BRACKET
   70               | OPEN_BRACKET preopcode_flag COMMA preopcode_flag CLOSE_BRACKET

   71 predicate: PRED0
   72          | PRED1
   73          | BANG PRED0
   74          | BANG PRED1
   75          | BANG PRED2
   76          | PRED2
   77          | PRED3
   78          | PREDN
   79          | BANG PRED3
   80          | BANG PREDN

   81 repeat: TEMP_REGISTER NUMBER

   82 idf_path: IDF_ST
   83         | IDF_PIXELBE

   84 opcode_modifier: /* empty */
   85                | OPCODE_FLAG1 opcode_modifier
   86                | REPEAT_FLAG opcode_modifier
   87                | OPCODE_FLAG2 opcode_modifier
   88                | OPCODE_FLAG3 opcode_modifier
   89                | C10_FLAG opcode_modifier
   90                | U8_FLAG opcode_modifier
   91                | F16_FLAG opcode_modifier
   92                | TEST_TYPE opcode_modifier
   93                | TEST_CHANSEL opcode_modifier
   94                | ABS opcode_modifier
   95                | TEST_MASK opcode_modifier

   96 source_arguments: argument
   97                 | argument COMMA source_arguments

   98 argument: prearg_mod arg_register arg_modifier
   99         | ABS_NODOT OPEN_BRACKET arg_register CLOSE_BRACKET arg_modifier
  100         | error

  101 prearg_mod: /* empty */
  102           | PLUS
  103           | MINUS
  104           | NOT
  105           | BANG
  106           | NUMBER MINUS

  107 register_type: REGISTER
  108              | TEMP_REGISTER

  109 arg_register: register_type NUMBER
  110             | dest_index_register
  111             | HASH expr
  112             | HASH FLOAT_NUMBER
  113             | HASH MINUS FLOAT_NUMBER
  114             | HASH LABEL_ADDRESS OPEN_BRACKET IDENTIFIER CLOSE_BRACKET
  115             | register_type OPEN_SQBRACKET src_index_register CLOSE_SQBRACKET
  116             | register_type OPEN_SQBRACKET src_index_register PLUS HASH NUMBER CLOSE_SQBRACKET
  117             | register_type OPEN_SQBRACKET src_index_register PLUS expr CLOSE_SQBRACKET
  118             | register_type OPEN_SQBRACKET expr PLUS src_index_register CLOSE_SQBRACKET
  119             | register_type NUMBER OPEN_SQBRACKET src_index_register PLUS expr CLOSE_SQBRACKET
  120             | register_type NUMBER OPEN_SQBRACKET expr PLUS src_index_register CLOSE_SQBRACKET
  121             | register_type OPEN_SQBRACKET HASH NUMBER CLOSE_SQBRACKET
  122             | register_type OPEN_SQBRACKET expr CLOSE_SQBRACKET
  123             | register_type NUMBER OPEN_SQBRACKET src_index_register CLOSE_SQBRACKET
  124             | register_type NUMBER OPEN_SQBRACKET src_index_register PLUS HASH NUMBER CLOSE_SQBRACKET
  125             | PRED0
  126             | PRED1
  127             | PRED2
  128             | PRED3
  129             | PCLINK
  130             | I0
  131             | I1
  132             | DIRECT_IMMEDIATE
  133             | SWIZZLE
  134             | ADDRESS_MODE
  135             | INTSRCSEL
  136             | OPCODE
  137             | SRC0
  138             | SRC1
  139             | SRC2
  140             | IDENTIFIER
  141             | IDENTIFIER OPEN_SQBRACKET HASH NUMBER CLOSE_SQBRACKET
  142             | IDENTIFIER OPEN_SQBRACKET expr CLOSE_SQBRACKET
  143             | SCOPE_NAME IDENTIFIER
  144             | SCOPE_NAME IDENTIFIER OPEN_SQBRACKET HASH NUMBER CLOSE_SQBRACKET

  145 expr: NUMBER
  146     | expr PLUS expr
  147     | expr MINUS expr
  148     | expr TIMES expr
  149     | expr DIVIDE expr
  150     | expr LSHIFT expr
  151     | expr RSHIFT expr
  152     | expr MODULUS expr
  153     | NOT expr
  154     | expr AND expr
  155     | expr OR expr
  156     | expr XOR expr
  157     | OPEN_BRACKET expr CLOSE_BRACKET
  158     | MINUS expr

  159 src_index_register: INDEXLOW
  160                   | INDEXHIGH

  161 dest_index_register: INDEXLOW
  162                    | INDEXHIGH
  163                    | INDEXBOTH

  164 arg_modifier: /* empty */
  165             | ARGUMENT_FLAG arg_modifier
  166             | C10_FLAG arg_modifier
  167             | F16_FLAG arg_modifier
  168             | U8_FLAG arg_modifier
  169             | ABS arg_modifier

  170 ld_argument: OPEN_SQBRACKET arg_register CLOSE_SQBRACKET
  171            | OPEN_SQBRACKET arg_register COMMA ldst_offset_argument CLOSE_SQBRACKET
  172            | OPEN_SQBRACKET arg_register COMMA ldst_offset_argument COMMA arg_register CLOSE_SQBRACKET

  173 eld_argument: OPEN_SQBRACKET arg_register COMMA arg_register CLOSE_SQBRACKET
  174             | OPEN_SQBRACKET arg_register COMMA arg_register COMMA arg_register CLOSE_SQBRACKET

  175 st_argument: OPEN_SQBRACKET arg_register CLOSE_SQBRACKET
  176            | OPEN_SQBRACKET arg_register COMMA ldst_offset_argument CLOSE_SQBRACKET

  177 ldst_offset_argument: arg_register
  178                     | offset_op arg_register
  179                     | arg_register offset_op

  180 offset_op: PLUSPLUS
  181          | MINUSMINUS
  182          | MINUS

  183 efo_expression: maybe_bang I0 EQUALS A0 COMMA maybe_bang I1 EQUALS A1 COMMA efo_addr_expr COMMA efo_mul_expr
  184               | maybe_bang I0 EQUALS A1 COMMA maybe_bang I1 EQUALS A0 COMMA efo_addr_expr COMMA efo_mul_expr
  185               | maybe_bang I0 EQUALS M0 COMMA maybe_bang I1 EQUALS M1 COMMA efo_addr_expr COMMA efo_mul_expr
  186               | maybe_bang I0 EQUALS A0 COMMA maybe_bang I1 EQUALS M1 COMMA efo_addr_expr COMMA efo_mul_expr
  187               | maybe_bang I1 EQUALS A1 COMMA efo_addr_expr COMMA efo_mul_expr
  188               | maybe_bang I1 EQUALS A0 COMMA efo_addr_expr COMMA efo_mul_expr
  189               | maybe_bang I1 EQUALS M1 COMMA efo_addr_expr COMMA efo_mul_expr
  190               | maybe_bang I0 EQUALS A0 COMMA efo_addr_expr COMMA efo_mul_expr
  191               | maybe_bang I0 EQUALS A1 COMMA efo_addr_expr COMMA efo_mul_expr
  192               | maybe_bang I0 EQUALS M0 COMMA efo_addr_expr COMMA efo_mul_expr

  193 efo_addr_expr: A0 EQUALS efo_add_src PLUS maybe_negate_r efo_add_src COMMA A1 EQUALS maybe_negate efo_add_src PLUS efo_add_src

  194 efo_add_src: SRC0
  195            | SRC1
  196            | SRC2
  197            | I0
  198            | I1
  199            | M0
  200            | M1

  201 efo_mul_expr: M0 EQUALS efo_mul_src TIMES efo_mul_src COMMA M1 EQUALS efo_mul_src TIMES efo_mul_src

  202 efo_mul_src: SRC0
  203            | SRC1
  204            | SRC2
  205            | I0
  206            | I1

  207 efo_dest_select: I0
  208                | I1
  209                | A0
  210                | A1

  211 maybe_bang: /* empty */
  212           | BANG

  213 maybe_negate: /* empty */
  214             | MINUS

  215 maybe_negate_r: /* empty */
  216               | MINUS

  217 temp_reg_names_optional: /* empty */
  218                        | temp_reg_names

  219 temp_reg_names: temp_reg_name
  220               | temp_reg_names COMMA temp_reg_name

  221 temp_reg_name: IDENTIFIER
  222              | IDENTIFIER OPEN_SQBRACKET HASH NUMBER CLOSE_SQBRACKET
  223              | IDENTIFIER OPEN_SQBRACKET expr CLOSE_SQBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256) 100
REGISTER (258) 107
OPCODE_FLAG1 (259) 85
OPCODE_FLAG2 (260) 87
OPCODE_FLAG3 (261) 88
ARGUMENT_FLAG (262) 165
MASK (263) 63
NUMBER (264) 12 20 23 25 27 28 81 106 109 116 119 120 121 123 124 141
    144 145 222
TEST_TYPE (265) 92
TEST_CHANSEL (266) 93
TEMP_REGISTER (267) 81 108
REPEAT_FLAG (268) 17 86
TEST_MASK (269) 95
C10_FLAG (270) 89 166
F16_FLAG (271) 91 167
U8_FLAG (272) 90 168
FLOAT_NUMBER (273) 112 113
OPCODE (274) 30 31 136
COISSUE_OPCODE (275) 52
LD_OPCODE (276) 32
ST_OPCODE (277) 33
ELD_OPCODE (278) 34
BRANCH_OPCODE (279) 35
EFO_OPCODE (280) 37
LAPC_OPCODE (281) 41
WDF_OPCODE (282) 46
EXT_OPCODE (283) 50 51
LOCKRELEASE_OPCODE (284) 43 44
IDF_OPCODE (285) 49
FIR_OPCODE (286) 55 56
ASOP2_OPCODE (287) 53 54
ONEARG_OPCODE (288) 48
PTOFF_OPCODE (289) 45
CALL_OPCODE (290) 36
NOP_OPCODE (291) 42
EMITVTX_OPCODE (292) 57
CFI_OPCODE (293) 47
INPUT (294) 4
OUTPUT (295) 5
OPEN_SQBRACKET (296) 115 116 117 118 119 120 121 122 123 124 141 142
    144 170 171 172 173 174 175 176 222 223
CLOSE_SQBRACKET (297) 115 116 117 118 119 120 121 122 123 124 141 142
    144 170 171 172 173 174 175 176 222 223
PLUS (298) 31 52 53 54 59 102 116 117 118 119 120 124 146 193
MINUS (299) 60 103 106 113 147 158 182 214 216
TIMES (300) 148 201
DIVIDE (301) 149
LSHIFT (302) 150
RSHIFT (303) 151
HASH (304) 111 112 113 114 116 121 124 141 144 222
BANG (305) 73 74 75 79 80 105 212
AND (306) 154
OR (307) 155
PLUSPLUS (308) 180
MINUSMINUS (309) 181
EQUALS (310) 37 50 183 184 185 186 187 188 189 190 191 192 193 201
NOT (311) 104 153
XOR (312) 156
OPEN_BRACKET (313) 40 69 70 99 114 157
CLOSE_BRACKET (314) 40 69 70 99 114 157
INSTRUCTION_DELIMITER (315) 2 3 6 7
COMMA (316) 20 25 26 28 30 31 32 33 34 37 47 49 50 51 54 55 56 70 97
    171 172 173 174 176 183 184 185 186 187 188 189 190 191 192 193
    201 220
PRED0 (317) 71 73 125
PRED1 (318) 72 74 126
PRED2 (319) 75 76 127
PRED3 (320) 77 79 128
PREDN (321) 78 80
SCHEDON (322) 14
SCHEDOFF (323) 13
SKIPINVON (324) 15
SKIPINVOFF (325) 16
REPEATOFF (326) 18
FORCE_ALIGN (327) 27 28
MISALIGN (328) 29
IMPORT (329) 22
EXPORT (330) 21
MODULEALIGN (331) 23
I0 (332) 130 183 184 185 186 190 191 192 197 205 207
I1 (333) 131 183 184 185 186 187 188 189 198 206 208
A0 (334) 183 184 186 188 190 193 209
A1 (335) 183 184 187 191 193 210
M0 (336) 185 192 199 201
M1 (337) 185 186 189 200 201
SRC0 (338) 137 194 202
SRC1 (339) 138 195 203
SRC2 (340) 139 196 204
DIRECT_IMMEDIATE (341) 132
ADDRESS_MODE (342) 134
SWIZZLE (343) 133
DATAFORMAT (344)
INTSRCSEL (345) 135
ABS (346) 94 169
ABS_NODOT (347) 99
UNEXPECTED_CHARACTER (348)
INDEXLOW (349) 159 161
INDEXHIGH (350) 160 162
INDEXBOTH (351) 163
PCLINK (352) 129
LABEL_ADDRESS (353) 114
IDF_ST (354) 82
IDF_PIXELBE (355) 83
NOSCHED_FLAG (356) 68
SKIPINV_FLAG (357) 67
TARGET_SPECIFIER (358) 19 20
TARGET (359) 19 20
TEMP_REG_DEF (360) 24
OPEN_CURLY_BRACKET (361) 10
CLOSE_CURLY_BRACKET (362) 9
PROC (363) 40
SCOPE_NAME (364) 143 144
IDENTIFIER (365) 8 21 22 26 38 40 58 59 60 61 114 140 141 142 143 144
    221 222 223
NAMED_REGS_RANGE (366) 25
RENAME_REG (367) 26
COLON (368) 38
COLON_PLUS_DELIMITER (369) 8
MODULUS (370) 152


Nonterminals, with rules where they appear

$accept (116)
    on left: 0
program (117)
    on left: 1 2 3 4 5 6 7 8 9 10, on right: 0 2 3 4 5 6 7 8 9 10
opt_register_list (118)
    on left: 11 12, on right: 4 5 12
pseudo_instruction (119)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26, on right: 3
forcealign (120)
    on left: 27 28 29, on right: 7
instruction (121)
    on left: 30 31 32 33 34 35 36 37 38 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57, on right: 2
$@1 (122)
    on left: 39, on right: 40
label (123)
    on left: 58 59 60, on right: 35
procedure (124)
    on left: 61, on right: 36
maybe_mask (125)
    on left: 62 63, on right: 30 31 55
preopcode_flag (126)
    on left: 64 65 66 67 68 69 70, on right: 30 32 33 34 35 36 37 41
    42 43 44 46 47 48 49 50 51 55 56 57 65 66 67 68 69 70
predicate (127)
    on left: 71 72 73 74 75 76 77 78 79 80, on right: 65
repeat (128)
    on left: 81, on right: 66
idf_path (129)
    on left: 82 83, on right: 49
opcode_modifier (130)
    on left: 84 85 86 87 88 89 90 91 92 93 94 95, on right: 30 31 32
    33 34 35 36 37 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 85 86 87 88 89 90 91 92 93 94 95
source_arguments (131)
    on left: 96 97, on right: 30 31 32 33 37 52 53 54 55 56 57 97
argument (132)
    on left: 98 99 100, on right: 30 31 32 34 37 50 51 55 96 97
prearg_mod (133)
    on left: 101 102 103 104 105 106, on right: 98
register_type (134)
    on left: 107 108, on right: 12 109 115 116 117 118 119 120 121
    122 123 124
arg_register (135)
    on left: 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138
    139 140 141 142 143 144, on right: 44 46 47 48 49 98 99 170 171
    172 173 174 175 176 177 178 179
expr (136)
    on left: 145 146 147 148 149 150 151 152 153 154 155 156 157 158,
    on right: 59 60 111 117 118 119 120 122 142 146 147 148 149 150
    151 152 153 154 155 156 157 158 223
src_index_register (137)
    on left: 159 160, on right: 115 116 117 118 119 120 123 124
dest_index_register (138)
    on left: 161 162 163, on right: 110
arg_modifier (139)
    on left: 164 165 166 167 168 169, on right: 98 99 165 166 167 168
    169
ld_argument (140)
    on left: 170 171 172, on right: 32
eld_argument (141)
    on left: 173 174, on right: 34
st_argument (142)
    on left: 175 176, on right: 33
ldst_offset_argument (143)
    on left: 177 178 179, on right: 171 172 176
offset_op (144)
    on left: 180 181 182, on right: 178 179
efo_expression (145)
    on left: 183 184 185 186 187 188 189 190 191 192, on right: 37
efo_addr_expr (146)
    on left: 193, on right: 183 184 185 186 187 188 189 190 191 192
efo_add_src (147)
    on left: 194 195 196 197 198 199 200, on right: 193
efo_mul_expr (148)
    on left: 201, on right: 183 184 185 186 187 188 189 190 191 192
efo_mul_src (149)
    on left: 202 203 204 205 206, on right: 201
efo_dest_select (150)
    on left: 207 208 209 210, on right: 37 50
maybe_bang (151)
    on left: 211 212, on right: 183 184 185 186 187 188 189 190 191
    192
maybe_negate (152)
    on left: 213 214, on right: 193
maybe_negate_r (153)
    on left: 215 216, on right: 193
temp_reg_names_optional (154)
    on left: 217 218, on right: 40
temp_reg_names (155)
    on left: 219 220, on right: 24 218 220
temp_reg_name (156)
    on left: 221 222 223, on right: 219 220


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . instruction INSTRUCTION_DELIMITER
    3        | program . pseudo_instruction INSTRUCTION_DELIMITER
    4        | program . INPUT opt_register_list
    5        | program . OUTPUT opt_register_list
    6        | program . INSTRUCTION_DELIMITER
    7        | program . forcealign INSTRUCTION_DELIMITER
    8        | program . IDENTIFIER COLON_PLUS_DELIMITER
    9        | program . CLOSE_CURLY_BRACKET
   10        | program . OPEN_CURLY_BRACKET

    $end                   shift, and go to state 2
    TEMP_REGISTER          shift, and go to state 3
    REPEAT_FLAG            shift, and go to state 4
    PTOFF_OPCODE           shift, and go to state 5
    INPUT                  shift, and go to state 6
    OUTPUT                 shift, and go to state 7
    PLUS                   shift, and go to state 8
    BANG                   shift, and go to state 9
    OPEN_BRACKET           shift, and go to state 10
    INSTRUCTION_DELIMITER  shift, and go to state 11
    PRED0                  shift, and go to state 12
    PRED1                  shift, and go to state 13
    PRED2                  shift, and go to state 14
    PRED3                  shift, and go to state 15
    PREDN                  shift, and go to state 16
    SCHEDON                shift, and go to state 17
    SCHEDOFF               shift, and go to state 18
    SKIPINVON              shift, and go to state 19
    SKIPINVOFF             shift, and go to state 20
    REPEATOFF              shift, and go to state 21
    FORCE_ALIGN            shift, and go to state 22
    MISALIGN               shift, and go to state 23
    IMPORT                 shift, and go to state 24
    EXPORT                 shift, and go to state 25
    MODULEALIGN            shift, and go to state 26
    NOSCHED_FLAG           shift, and go to state 27
    SKIPINV_FLAG           shift, and go to state 28
    TARGET                 shift, and go to state 29
    TEMP_REG_DEF           shift, and go to state 30
    OPEN_CURLY_BRACKET     shift, and go to state 31
    CLOSE_CURLY_BRACKET    shift, and go to state 32
    PROC                   shift, and go to state 33
    IDENTIFIER             shift, and go to state 34
    NAMED_REGS_RANGE       shift, and go to state 35
    RENAME_REG             shift, and go to state 36

    $default  reduce using rule 64 (preopcode_flag)

    pseudo_instruction  go to state 37
    forcealign          go to state 38
    instruction         go to state 39
    preopcode_flag      go to state 40
    predicate           go to state 41
    repeat              go to state 42


state 2

    0 $accept: program $end .

    $default  accept


state 3

   81 repeat: TEMP_REGISTER . NUMBER

    NUMBER  shift, and go to state 43


state 4

   17 pseudo_instruction: REPEAT_FLAG .

    $default  reduce using rule 17 (pseudo_instruction)


state 5

   45 instruction: PTOFF_OPCODE . opcode_modifier

    OPCODE_FLAG1  shift, and go to state 44
    OPCODE_FLAG2  shift, and go to state 45
    OPCODE_FLAG3  shift, and go to state 46
    TEST_TYPE     shift, and go to state 47
    TEST_CHANSEL  shift, and go to state 48
    REPEAT_FLAG   shift, and go to state 49
    TEST_MASK     shift, and go to state 50
    C10_FLAG      shift, and go to state 51
    F16_FLAG      shift, and go to state 52
    U8_FLAG       shift, and go to state 53
    ABS           shift, and go to state 54

    $default  reduce using rule 84 (opcode_modifier)

    opcode_modifier  go to state 55


state 6

    4 program: program INPUT . opt_register_list

    $default  reduce using rule 11 (opt_register_list)

    opt_register_list  go to state 56


state 7

    5 program: program OUTPUT . opt_register_list

    $default  reduce using rule 11 (opt_register_list)

    opt_register_list  go to state 57


state 8

   31 instruction: PLUS . OPCODE opcode_modifier argument maybe_mask COMMA source_arguments
   52            | PLUS . COISSUE_OPCODE opcode_modifier source_arguments
   53            | PLUS . ASOP2_OPCODE opcode_modifier source_arguments
   54            | PLUS . ASOP2_OPCODE opcode_modifier COMMA source_arguments

    OPCODE          shift, and go to state 58
    COISSUE_OPCODE  shift, and go to state 59
    ASOP2_OPCODE    shift, and go to state 60


state 9

   73 predicate: BANG . PRED0
   74          | BANG . PRED1
   75          | BANG . PRED2
   79          | BANG . PRED3
   80          | BANG . PREDN

    PRED0  shift, and go to state 61
    PRED1  shift, and go to state 62
    PRED2  shift, and go to state 63
    PRED3  shift, and go to state 64
    PREDN  shift, and go to state 65


state 10

   69 preopcode_flag: OPEN_BRACKET . preopcode_flag CLOSE_BRACKET
   70               | OPEN_BRACKET . preopcode_flag COMMA preopcode_flag CLOSE_BRACKET

    TEMP_REGISTER  shift, and go to state 3
    BANG           shift, and go to state 9
    OPEN_BRACKET   shift, and go to state 10
    PRED0          shift, and go to state 12
    PRED1          shift, and go to state 13
    PRED2          shift, and go to state 14
    PRED3          shift, and go to state 15
    PREDN          shift, and go to state 16
    NOSCHED_FLAG   shift, and go to state 27
    SKIPINV_FLAG   shift, and go to state 28

    $default  reduce using rule 64 (preopcode_flag)

    preopcode_flag  go to state 66
    predicate       go to state 41
    repeat          go to state 42


state 11

    6 program: program INSTRUCTION_DELIMITER .

    $default  reduce using rule 6 (program)


state 12

   71 predicate: PRED0 .

    $default  reduce using rule 71 (predicate)


state 13

   72 predicate: PRED1 .

    $default  reduce using rule 72 (predicate)


state 14

   76 predicate: PRED2 .

    $default  reduce using rule 76 (predicate)


state 15

   77 predicate: PRED3 .

    $default  reduce using rule 77 (predicate)


state 16

   78 predicate: PREDN .

    $default  reduce using rule 78 (predicate)


state 17

   14 pseudo_instruction: SCHEDON .

    $default  reduce using rule 14 (pseudo_instruction)


state 18

   13 pseudo_instruction: SCHEDOFF .

    $default  reduce using rule 13 (pseudo_instruction)


state 19

   15 pseudo_instruction: SKIPINVON .

    $default  reduce using rule 15 (pseudo_instruction)


state 20

   16 pseudo_instruction: SKIPINVOFF .

    $default  reduce using rule 16 (pseudo_instruction)


state 21

   18 pseudo_instruction: REPEATOFF .

    $default  reduce using rule 18 (pseudo_instruction)


state 22

   27 forcealign: FORCE_ALIGN . NUMBER
   28           | FORCE_ALIGN . NUMBER COMMA NUMBER

    NUMBER  shift, and go to state 67


state 23

   29 forcealign: MISALIGN .

    $default  reduce using rule 29 (forcealign)


state 24

   22 pseudo_instruction: IMPORT . IDENTIFIER

    IDENTIFIER  shift, and go to state 68


state 25

   21 pseudo_instruction: EXPORT . IDENTIFIER

    IDENTIFIER  shift, and go to state 69


state 26

   23 pseudo_instruction: MODULEALIGN . NUMBER

    NUMBER  shift, and go to state 70


state 27

   68 preopcode_flag: NOSCHED_FLAG . preopcode_flag

    TEMP_REGISTER  shift, and go to state 3
    BANG           shift, and go to state 9
    OPEN_BRACKET   shift, and go to state 10
    PRED0          shift, and go to state 12
    PRED1          shift, and go to state 13
    PRED2          shift, and go to state 14
    PRED3          shift, and go to state 15
    PREDN          shift, and go to state 16
    NOSCHED_FLAG   shift, and go to state 27
    SKIPINV_FLAG   shift, and go to state 28

    $default  reduce using rule 64 (preopcode_flag)

    preopcode_flag  go to state 71
    predicate       go to state 41
    repeat          go to state 42


state 28

   67 preopcode_flag: SKIPINV_FLAG . preopcode_flag

    TEMP_REGISTER  shift, and go to state 3
    BANG           shift, and go to state 9
    OPEN_BRACKET   shift, and go to state 10
    PRED0          shift, and go to state 12
    PRED1          shift, and go to state 13
    PRED2          shift, and go to state 14
    PRED3          shift, and go to state 15
    PREDN          shift, and go to state 16
    NOSCHED_FLAG   shift, and go to state 27
    SKIPINV_FLAG   shift, and go to state 28

    $default  reduce using rule 64 (preopcode_flag)

    preopcode_flag  go to state 72
    predicate       go to state 41
    repeat          go to state 42


state 29

   19 pseudo_instruction: TARGET . TARGET_SPECIFIER
   20                   | TARGET . TARGET_SPECIFIER COMMA NUMBER

    TARGET_SPECIFIER  shift, and go to state 73


state 30

   24 pseudo_instruction: TEMP_REG_DEF . temp_reg_names

    IDENTIFIER  shift, and go to state 74

    temp_reg_names  go to state 75
    temp_reg_name   go to state 76


state 31

   10 program: program OPEN_CURLY_BRACKET .

    $default  reduce using rule 10 (program)


state 32

    9 program: program CLOSE_CURLY_BRACKET .

    $default  reduce using rule 9 (program)


state 33

   40 instruction: PROC . IDENTIFIER $@1 OPEN_BRACKET temp_reg_names_optional CLOSE_BRACKET

    IDENTIFIER  shift, and go to state 77


state 34

    8 program: program IDENTIFIER . COLON_PLUS_DELIMITER
   38 instruction: IDENTIFIER . COLON

    COLON                 shift, and go to state 78
    COLON_PLUS_DELIMITER  shift, and go to state 79


state 35

   25 pseudo_instruction: NAMED_REGS_RANGE . NUMBER COMMA NUMBER

    NUMBER  shift, and go to state 80


state 36

   26 pseudo_instruction: RENAME_REG . IDENTIFIER COMMA IDENTIFIER

    IDENTIFIER  shift, and go to state 81


state 37

    3 program: program pseudo_instruction . INSTRUCTION_DELIMITER

    INSTRUCTION_DELIMITER  shift, and go to state 82


state 38

    7 program: program forcealign . INSTRUCTION_DELIMITER

    INSTRUCTION_DELIMITER  shift, and go to state 83


state 39

    2 program: program instruction . INSTRUCTION_DELIMITER

    INSTRUCTION_DELIMITER  shift, and go to state 84


state 40

   30 instruction: preopcode_flag . OPCODE opcode_modifier argument maybe_mask COMMA source_arguments
   32            | preopcode_flag . LD_OPCODE opcode_modifier argument COMMA ld_argument COMMA source_arguments
   33            | preopcode_flag . ST_OPCODE opcode_modifier st_argument COMMA source_arguments
   34            | preopcode_flag . ELD_OPCODE opcode_modifier argument COMMA eld_argument COMMA argument COMMA argument
   35            | preopcode_flag . BRANCH_OPCODE opcode_modifier label
   36            | preopcode_flag . CALL_OPCODE opcode_modifier procedure
   37            | preopcode_flag . EFO_OPCODE opcode_modifier argument EQUALS efo_dest_select COMMA efo_expression COMMA source_arguments
   41            | preopcode_flag . LAPC_OPCODE opcode_modifier
   42            | preopcode_flag . NOP_OPCODE opcode_modifier
   43            | preopcode_flag . LOCKRELEASE_OPCODE opcode_modifier
   44            | preopcode_flag . LOCKRELEASE_OPCODE opcode_modifier arg_register
   46            | preopcode_flag . WDF_OPCODE opcode_modifier arg_register
   47            | preopcode_flag . CFI_OPCODE opcode_modifier arg_register COMMA arg_register COMMA arg_register
   48            | preopcode_flag . ONEARG_OPCODE opcode_modifier arg_register
   49            | preopcode_flag . IDF_OPCODE opcode_modifier arg_register COMMA idf_path
   50            | preopcode_flag . EXT_OPCODE opcode_modifier argument EQUALS efo_dest_select COMMA argument COMMA argument COMMA argument
   51            | preopcode_flag . EXT_OPCODE opcode_modifier argument COMMA argument COMMA argument COMMA argument
   55            | preopcode_flag . FIR_OPCODE opcode_modifier argument maybe_mask COMMA source_arguments
   56            | preopcode_flag . FIR_OPCODE opcode_modifier COMMA source_arguments
   57            | preopcode_flag . EMITVTX_OPCODE opcode_modifier source_arguments

    OPCODE              shift, and go to state 85
    LD_OPCODE           shift, and go to state 86
    ST_OPCODE           shift, and go to state 87
    ELD_OPCODE          shift, and go to state 88
    BRANCH_OPCODE       shift, and go to state 89
    EFO_OPCODE          shift, and go to state 90
    LAPC_OPCODE         shift, and go to state 91
    WDF_OPCODE          shift, and go to state 92
    EXT_OPCODE          shift, and go to state 93
    LOCKRELEASE_OPCODE  shift, and go to state 94
    IDF_OPCODE          shift, and go to state 95
    FIR_OPCODE          shift, and go to state 96
    ONEARG_OPCODE       shift, and go to state 97
    CALL_OPCODE         shift, and go to state 98
    NOP_OPCODE          shift, and go to state 99
    EMITVTX_OPCODE      shift, and go to state 100
    CFI_OPCODE          shift, and go to state 101


state 41

   65 preopcode_flag: predicate . preopcode_flag
